Convert raw video and channel statistics from string to integer data types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "workbench.settings.editor": "ui",
-  "workbench.settings.showSuggestions": false
+  "workbench.settings.showSuggestions": false,
+  "files.autoSave": "onFocusChange"
 }
