Add ranking field to video table and update env vars for MongoDB collections

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ YOUTUBE_API_KEY="PASTE_YOUR_YOUTUBE_API_KEY_HERE"
 
 MONGODB_URI="MONGODB_URI"
 
+MONGODB_NAME="MONGODB_DB_NAME"
+MONGODB_COLLECTION_NAME_CHANNEL="MONGODB_COLLECTION_NAME_CHANNEL"
+MONGODB_COLLECTION_NAME_VIDEO="MONGODB_COLLECTION_NAME_VIDEO"
+
 POSTGRES_URI="POSTGRES_URI"
