--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -2,14 +2,16 @@ name: My Workflow
 
 on: [push]
 
-env:
-  GLOBAL_ENV_VAR: "🌍 Hello from the top!"
-
 jobs:
   secret-job:
-    runs-on : ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      - name : Print secret
-        run : echo "Secret is $YOUTUBE_API_KEY"
-      - name : Print global env var
-        run : echo "Global env var is $GLOBAL_ENV_VAR"
+      - name: Print secret
+        env:
+          YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
+        run: echo "Secret is $YOUTUBE_API_KEY"
+
+      - name: Print global env var
+        env:
+          GLOBAL_ENV_VAR: ${{ secrets.GLOBAL_ENV_VAR }}
+        run: echo "Global env var is $GLOBAL_ENV_VAR"
