--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -1,5 +1,8 @@
 name : Get YouTube Trending Data and Channel
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '0 */1 * * *' # Runs every hour
   workflow_dispatch:
