--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -8,12 +8,16 @@ on:
   workflow_dispatch:
 
 env :
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
   MONGODB_URI: ${{ secrets.MONGODB_URI }}
   MONGODB_NAME: ${{ secrets.MONGODB_NAME }}
   MONGODB_COLLECTION_NAME_CHANNEL: ${{ secrets.MONGODB_COLLECTION_NAME_CHANNEL }}
   MONGODB_COLLECTION_NAME_VIDEO: ${{ secrets.MONGODB_COLLECTION_NAME_VIDEO }}
   POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
+
+permissions:
+  contents: write
 
 jobs:
   run-script:  
