--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '10 * * * *' # Runs every hour
+    - cron: '0 * * * *' # Runs every hour
   workflow_dispatch:
 
 env :
@@ -20,10 +20,10 @@ permissions:
   contents: write
 
 jobs:
-  run-script:  
+  scheduledGetData:  
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 📃 Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Python
@@ -31,20 +31,20 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies 
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run script
+      - name: 🛠️ Run Python script
         run: |
           python main.py
 
-      - name : Automate README Update
+      - name : 📂 Create log directory
         run : |
           echo  "🕒 Action run at $(date -u)" >> logs/action-log.txt
 
-      - name: Commit log update
+      - name: 📜 Commit log update
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
