--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -43,6 +43,7 @@ jobs:
 
       - name: 📜 Commit log update
         run: |
+          git pull origin main
           git config --global user.name 'github-actions[bot]'
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add logs/action-log.txt
