--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -46,6 +46,6 @@ jobs:
           git pull origin main
           git config --global user.name 'github-actions[bot]'
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add logs/action-log.txt
+          git add logs/action_log.txt
           git commit -m "🔄 Log update: $(date -u)"
           git push
