--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -1,10 +1,10 @@
-name : Get YouTube Trending Data and Channel
+name: Get YouTube Trending Data and Channel
 on:
   schedule:
-    - cron: '0 * * * *' # Runs every hour
-  workflow_dispatch:    # Manual trigger from GitHub UI
+    - cron: "0 * * * *" # Runs every hour
+  workflow_dispatch: # Manual trigger from GitHub UI
 
-env :
+env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
   MONGODB_URI: ${{ secrets.MONGODB_URI }}
@@ -17,7 +17,7 @@ permissions:
   contents: write
 
 jobs:
-  scheduledGetData:  
+  scheduledGetData:
     runs-on: ubuntu-latest
     steps:
       - name: 📃 Checkout repository
@@ -26,9 +26,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: 📦 Install dependencies 
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -37,9 +37,21 @@ jobs:
         run: |
           python main.py
 
-      - name : 📂 Create log directory
-        run : |
-          echo  "🕒 Action run at $(date -u)" >> logs/action-log.txt
+  logsUpdate:
+    runs-on: ubuntu-latest
+    dependsOn: scheduledGetData
+    steps:
+      - name: 📃 Checkout repository
+        uses: actions/checkout@v2
+
+      - name: 🗑️ Delete Logs more of than 3 Months.
+        run: |
+          find logs/ -type f -mtime +90 -delete;
+          echo "🗑️ Deleted logs older than 90 days"
+
+      - name: 📂 Adding Logs Update in logs file
+        run: |
+          echo  "🕒 Action run at $(date '+%Y-%m-%d %H:%M:%S')" >> logs/$(date +%Y-%m-%d).txt
 
       - name: 📜 Commit log update
         run: |
