--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -55,6 +55,7 @@ jobs:
 
       - name: 📜 Commit log update
         run: |
+          git pull origin main || true
           git config --global user.name 'github-actions[bot]'
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
