I cannot generate a commit message without seeing the code changes. Please share the diff or modified files so I can help write an appropriate commit message.

--- a/.github/workflows/scheduledgetData.yaml
+++ b/.github/workflows/scheduledgetData.yaml
@@ -42,7 +42,7 @@ jobs:
 
   logsUpdate:
     runs-on: ubuntu-latest
-    dependsOn: scheduledGetData
+    depends-on: scheduledGetData
     steps:
       - name: 📃 Checkout repository
         uses: actions/checkout@v2
